fixes some bugs and update docs
